RESOLVED FIXED173670
Compiler error while building with !HAVE(ACCESSIBILITY)
https://bugs.webkit.org/show_bug.cgi?id=173670
Summary Compiler error while building with !HAVE(ACCESSIBILITY)
Daewoong Jang
Reported 2017-06-21 15:19:38 PDT
Fixes an error introduced after r218532.
Attachments
patch (2.05 KB, patch)
2017-06-21 15:23 PDT, Daewoong Jang
no flags
Daewoong Jang
Comment 1 2017-06-21 15:23:52 PDT
WebKit Commit Bot
Comment 2 2017-06-21 17:25:10 PDT
Comment on attachment 313555 [details] patch Clearing flags on attachment: 313555 Committed r218664: <http://trac.webkit.org/changeset/218664>
WebKit Commit Bot
Comment 3 2017-06-21 17:25:11 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.