Compiler error while building with !HAVE(ACCESSIBILITY) https://bugs.webkit.org/show_bug.cgi?id=173670

Patch by Daewoong Jang <daewoong.jang@navercorp.com> on 2017-06-21
Reviewed by Chris Fleizach.

* accessibility/AXObjectCache.h:
(WebCore::AXObjectCache::getOrCreate):
(WebCore::AXObjectCache::childrenChanged):

Canonical link: https://commits.webkit.org/190554@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@218664 268f45cc-cd09-0410-ab3c-d52691b4dbfc